@@ -1,3 +1,7 @@
+15 Apr 2007 coudercd
+ * fixed processing of pkg-config library directory to support
+   multiples path, noticed by Marco Ghirlanda.
+
 13 Apr 2007 coudercd
  * fixed library source labels generation.
  * fixed object dependencies when an object is used in both a binary
